# FamilyTree

./: .clang-format  .clang-tidy  .gitignore  AddDocumentation.cmake  CMakeLists.txt  CMakeSettings.json  CheckFormat.py  CodeAnalysis.cmake  Doxyfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  doxygen.yml
data/: BEISPIEL_PERSON.json  macro.txt  relations.csv  relations_extra.csv
data/10_Melody_Moran/: data.json
data/11_Maia_Salinas/: data.json
data/12_Mary_Fleming/: data.json
data/13_Kaitlyn_Ball/: data.json
data/14_Leyla_Johns/: data.json
data/15_Sara_Paul/: data.json
data/16_Kye_Hall/: data.json
data/17_Ellis_Diaz/: data.json
data/18_Lee_Snyder/: data.json
data/1_Philippa_Perry/: data.json
data/2_Katy_Santos/: data.json
data/3_Pippa_Ross/: data.json
data/4_Constance_Houghton/: data.json  data_extra.json
data/5_Bethany_Barnes/: data.json
data/6_Paige_Ruiz/: data.json
data/7_Harmony_Valdez/: data.json
data/8_Megan_Christensen/: data.json
data/9_Jodie_Mccarthy/: data.json
docs/debt/: tdr_0000.md  tdr_0001.md  tdr_0002.md  tdr_0003.md  tdr_0004.md  tdr_template.md
docs/desitions/: adr_0000.md  adr_0001.md  adr_0002.md  adr_0003.md  adr_0004.md  adr_0005.md  adr_0006.md  adr_0007.md  adr_template.md
docs/doxygen/: DoxygenLayout.xml
docu/: README.md  system_diagram.tldr
docu/debt/: tdr_0000.md  tdr_0001.md  tdr_0004.md
docu/desitions/: adr_0001.md  adr_0002.md  adr_0003.md  adr_0004.md  adr_0006.md
docu/doxygen/: DoxygenLayout.xml  doxygen-awesome.css
exes/: CMakeLists.txt
exes/comand_line_interface/: CMakeLists.txt  main.cpp
exes/comand_line_interface/src/: commands.cpp  graph.cpp  graph.hpp
exes/imgui_ui/: CMakeLists.txt  main.cpp
exes/imgui_ui/src/: context_adapter.cpp  context_adapter.hpp  detailed_view.cpp  detailed_view.hpp  global_trace.hpp  imgui_adapter.hpp  linux_adapter.cpp  linux_adapter.hpp  list_view.cpp  list_view.hpp  on_frame_trace_decorator.cpp  on_frame_trace_decorator.hpp  search_view.cpp  search_view.hpp  setup_view.cpp  setup_view.hpp  tree_view.cpp  tree_view.hpp  view.cpp  view.hpp  windows_adapter.cpp  windows_adapter.hpp
exes/json_person_generator/: CMakeLists.txt  main.cpp
exes/telemetry_viewer/: CMakeLists.txt  main.cpp
exes/telemetry_viewer/src/: entries.cpp  entries.hpp  utils.cpp  utils.hpp
includes/family_tree/: api.h  types.h
lib_family_tree/: CMakeLists.txt
lib_family_tree/includes/family_tree/: api.h  types.h
lib_family_tree/src/: algorythms.c  context.c  csv_relation.c  forwarding_provider.c  json_parser.c  json_person.c  null_platform.c  patch.h  provider_composit.c  windows_platform.c
lib_family_tree/tests/: CMakeLists.txt  main.cpp
lib_family_tree/tests/src/: algorythms_test.cpp  algorythms_test.hpp  api_tests.cpp  api_tests.hpp  auto_free.hpp  check.hpp  csv_relation_tests.cpp  csv_relation_tests.hpp  json_parser_tests.cpp  json_parser_tests.hpp  json_person_tests.cpp  json_person_tests.hpp  mock_data_provider.cpp  mock_data_provider.hpp  mock_platform.cpp  mock_platform.hpp  provider_composit_tests.cpp  provider_composit_tests.hpp
libs/: CMakeLists.txt
libs/familytree_adapter/: CMakeLists.txt
libs/familytree_adapter/includes/familytree_adapter/: context_adapter.hpp
libs/familytree_adapter/src/: context_adapter.cpp
libs/imgui_adapter/: CMakeLists.txt
libs/imgui_adapter/includes/imgui_adapter/: imgui_adapter.hpp
libs/imgui_adapter/src/: linux_adapter.cpp  linux_adapter.hpp  windows_adapter.cpp  windows_adapter.hpp
libs/telemetry/: CMakeLists.txt
libs/telemetry/includes/telemetry/: telemetry.hpp
libs/telemetry/src/: logging_trace.cpp  logging_trace.hpp  telemetry.cpp
src/: algorythms.c  algorythms.h  context.c  csv_relation.c  forwarding_provider.c  internal_types.h  json_parser.c  json_parser.h  json_person.c  noop_trace.c  null_platform.c  provider_composit.c  shared_type_decorator.c  windows_platform.c
src_exe/: commands.cpp  commands.hpp  graph.cpp  graph.hpp  main.cpp  trace.cpp  trace.hpp
src_old/: application.c  application.h  application_types.c  application_types.h  base_types.c  base_types.h  generic_types.h  graph.c  graph.h  graph_types.c  graph_types.h  main.c  platform.h  platform_linux.c  platform_windows.c  print.c  print.h
src_test/: algorythms_test.cpp  algorythms_test.hpp  api_tests.cpp  api_tests.hpp  auto_free.hpp  csv_relation_tests.cpp  json_parser_tests.cpp  json_parser_tests.hpp  json_person_tests.cpp  main.cpp  mock_data_provider.cpp  mock_data_provider.hpp  mock_platform.cpp  mock_platform.hpp  provider_composit_tests.cpp
